--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
       hibernate:
         globally_quoted_identifiers: true
     show-sql: true
+
+jwt:
+  secret: superUltraMegaDuperAlphaSecret360BrokenPassword
+  exptime: 1296000000
