--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -23,8 +23,8 @@ spring:
       client:
         registration:
           google:
-            client-id: google-client-id
-            client-secret: google-client-secret
+            client-id: "http://266523106449-pojfcjr5r4gtmlontuhfuc3ram9a54l7.apps.googleusercontent.com"
+            client-secret: "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"
 
 
 jwt:
