--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -18,14 +18,8 @@ spring:
       hibernate:
         globally_quoted_identifiers: true
     show-sql: true
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: "http://266523106449-pojfcjr5r4gtmlontuhfuc3ram9a54l7.apps.googleusercontent.com"
-            client-secret: "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"
-
+  config:
+    additional-location: classpath:/application-secrets.yml
 
 jwt:
   secret: superUltraMegaDuperAlphaSecret360BrokenPassword
