--- a/NeighSecure-API/build.gradle
+++ b/NeighSecure-API/build.gradle
@@ -44,6 +44,9 @@ dependencies {
 
     // google
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    // doten java for .env
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 }
 
 tasks.named('test') {
