--- a/NeighSecure-API/build.gradle
+++ b/NeighSecure-API/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     // google
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    // doten java for .env
+    // doten java for env
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 }
 
