--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres #jdbc:mysql://localhost:3306/neighsecure?useSSL=false
     username: postgres
-    password: florerUWU!comadikWSL2
+    password: 200317
   jpa:
     hibernate:
       ddl-auto: update
@@ -23,8 +23,9 @@ spring:
       client:
         registration:
           google:
-            client-id: kk
-            client-secret: kk2
+            client-id: 266523106449-pojfcjr5r4gtmlontuhfuc3ram9a54l7.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: http://localhost:5173
 
 jwt:
   secret: superUltraMegaDuperAlphaSecret360BrokenPassword
