--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres #jdbc:mysql://localhost:3306/neighsecure?useSSL=false
     username: postgres
-    password: 200317
+    password: florerUWU!comadikWSL2
   jpa:
     hibernate:
       ddl-auto: update
