Add: ServoController with funcs

--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -33,3 +33,8 @@ spring:
 jwt:
   secret: superUltraMegaDuperAlphaSecret360BrokenPassword
   exptime: 1296000000
+
+adafruit:
+  io:
+    username: ${SERVO_NAME}
+    key: ${ADA_KEY}
