Add: Configure Time Zone

--- a/NeighSecure-API/src/main/resources/application.yml
+++ b/NeighSecure-API/src/main/resources/application.yml
@@ -3,7 +3,7 @@
 
 spring:
   jackson:
-    time-zone: America/Mexico_City
+    time-zone: America/El_Salvador
   application:
     name: NeighSecure-API
   sql:
